--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,3 +59,11 @@ logging:
     org.hibernate.SQL: debug
     org.hibernate.type.descriptor.sql.BasicBinder: trace
     com.example.demo: debug
+
+# AWS
+aws:
+  region: ap-northeast-1
+  cognito:
+    userpool-id: ap-northeast-1_xxxx
+    client-id: xxxx
+    
